revamp match response
